--- a/AAA-ss/public/index.html
+++ b/AAA-ss/public/index.html
@@ -23,7 +23,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <title>React App</title>
+    <title>Secure Wrapper App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
